# french-numbers

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  release.toml
.github/workflows/: tests.yml
examples/: french-number.rs
src/: lib.rs
tests/: french_numbers.rs  fuzzy.rs  proptest.proptest-regressions  proptest.rs
tests/files/: nombres-francais-pre-reforme.txt  nombres-francais.txt
