[package]
name = "french-numbers"
description = "Represent numbers in French language"
keywords = ["text", "french", "numbers"]
license = "Apache-2.0/MIT"
homepage = "https://rfc1149.net/devel/french-numbers.html"
documentation = "https://docs.rs/french-numbers/"
version = "1.2.0"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
categories = ["value-formatting"]
readme = "README.md"
edition = "2021"
rust-version = "1.70.0"

[[bin]]
name = "french-numbers"
required-features = ["cli"]

[dependencies]
clap = { version = "4.4.13", features = ["derive"], optional = true }
num-bigint = { version = "0.4.4", optional = true }
num-integer = "0.1.45"
num-traits = "0.2.17"

# Fake dependency to avoid depending on a non-compiling older version
proc-macro2 = { version = "1.0.75", optional = true }

[dev-dependencies]
num-bigint = "0.4.4"
proptest = "1.4.0"

[features]
default = []
cli = ["dep:num-bigint", "dep:clap", "dep:proc-macro2"]
