[package]
name = "french-numbers"
description = "Represent numbers in French language"
keywords = ["text", "french", "numbers"]
license = "Apache-2.0/MIT"
homepage = "https://rfc1149.net/devel/french-numbers.html"
documentation = "https://docs.rs/french-numbers/"
version = "1.2.0"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
categories = ["value-formatting"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.1"

[[bin]]
name = "french-numbers"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"], optional = true }
num-bigint = { version = "0.4.4", optional = true }
num-integer = "0.1.46"
num-traits = "0.2.18"

[dev-dependencies]
num-bigint = "0.4.4"
proptest = "1.4.0"

[features]
default = []
cli = ["dep:num-bigint", "dep:clap"]
